--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
 
 
-    <img src="cat2.png" alt="cat with hearts" class="cat">
+    <img src="cat2.png" alt="cat" class="cat">
 
     <h1>Котик, Будешь моей валентинкой? 💖</h1>
 
@@ -23,7 +23,7 @@
     <div id="surprise" class="hidden">
       <h2>УРАААА! 💘</h2>
       <p>Теперь ты официально моя валентинка 💕</p>
-      <img src="cat1.png" alt="heart" class="surprise-img">
+     <img src="cat1.png" alt="heart" class="surprise-img">
     </div>
 
   </div>
@@ -36,6 +36,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
