--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <img src="cat2.png" alt="cat" class="cat">
 
-    <h1>Котик, Будешь моей валентинкой? 💖</h1>
+    <h1>Котик,будешь моей валентинкой? 💖</h1>
 
     <div class="buttons">
       <button id="yesBtn">ДА! 💕</button>
@@ -36,6 +36,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
